# udaan-research-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cross-Encoder-Re-Ranking.md  DEPLOY.md  Dockerfile  Full-Text-Resolution.md  Generation-And-Citation-Weaving.md  Graph-Gateway.md  Query-Orchestration.md  README.md  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  run.sh  vercel.json
.github/workflows/: ci.yml  deploy-frontend.yml
docs/: README.md  phase-1-query-orchestration.md  phase-2-open-graph-gateway.md  phase-3-cross-encoder-re-ranking.md  phase-4-full-text-resolution.md  phase-5-ingestion-and-parsing.md  phase-6-synthesis-and-polarity.md  phase-7-generation-and-citation-weaving.md
infra/: .env.example  docker-compose.yml
infra/hf-space/: README.md  start.sh
services/parsing/: pyproject.toml
services/parsing/tests/: test_idempotency.py  test_ingest.py  test_objstore.py  test_quality.py
services/parsing/udaan_parsing/: __init__.py  app.py  embeddings.py  extract.py  ingest.py  objstore.py  parser.py  store.py
services/ranking/: pyproject.toml
services/ranking/tests/: test_app.py  test_quality.py  test_reranker.py  test_scoring.py  test_service.py
services/ranking/udaan_ranking/: __init__.py  app.py  reranker.py  scoring.py  sequence.py
services/shared/tests/: test_providers.py
services/shared/udaan_shared/: __init__.py  config.py  impl.py  providers.py
services/synthesis/tests/: test_quality.py
services/synthesis/udaan_synthesis/: app.py  clustering.py  source.py  synthesize.py
