[project]
name = "udaan-parsing"
version = "0.0.0"
description = "Phase 5 — Local Ingestion & Parsing service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pypdf>=4.0",
  "udaan-contracts",
  "udaan-shared",
]

# Hosted-only build: parsing uses the LlamaParse cloud API + Cohere embeddings,
# so the service stays light (no torch/Docling). Install the storage extras:
#   uv sync --extra s3 --extra qdrant
[project.optional-dependencies]
qdrant = ["qdrant-client>=1.10"]
s3 = ["boto3>=1.34"]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
udaan-contracts = { path = "../../packages/contracts/python", editable = true }
udaan-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["udaan_parsing"]
