[project]
name = "udaan-ranking"
version = "0.0.0"
description = "Phase 3 — Cross-Encoder Re-Ranking service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "udaan-contracts",
  "udaan-shared",
]

# Hosted-only build: reranking is the Cohere rerank API (stdlib HTTP), so the
# service needs no ML stack. Just `uv sync`.
[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
udaan-contracts = { path = "../../packages/contracts/python", editable = true }
udaan-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["udaan_ranking"]
